--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
+    <div class="header">
+        <nav>
+            <h1 class="title">فروشگاه کفش   های ای پرو</h1>
+         </nav>
+         <div class="hero-section">
+             <img src="./assets/images/hero.webp" alt="">
+         </div>
+    </div>
     
 </body>
 </html>
