--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pe" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +15,50 @@
              <img src="./assets/images/hero.webp" alt="">
          </div>
     </div>
-    
+    <div class="container">
+        <h2 class="">جدید ترین کفش ها</h2>
+       <div class="row">
+            <div class="col-">
+                <img src="./assets/images/katooni1.webp" alt="">
+                <div class="info">
+                    <p class="model">
+                        <span>مدل کفش : </span> <span>نایک</span>
+                    </p>
+                    <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+                    <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+                </div>
+            </div>
+            <div class="col-">
+                <img src="./assets/images/katooni1.webp" alt="">
+                <div class="info">
+                    <p class="model">
+                        <span>مدل کفش : </span> <span>نایک</span>
+                    </p>
+                    <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+                    <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+                </div>
+            </div>
+            <div class="col-">
+                <img src="./assets/images/katooni1.webp" alt="">
+                <div class="info">
+                    <p class="model">
+                        <span>مدل کفش : </span> <span>نایک</span>
+                    </p>
+                    <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+                    <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+                </div>
+            </div>
+            <div class="col-">
+                <img src="./assets/images/katooni1.webp" alt="">
+                <div class="info">
+                    <p class="model">
+                        <span>مدل کفش : </span> <span>نایک</span>
+                    </p>
+                    <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+                    <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+                </div>
+            </div>
+       </div> 
+    </div>
 </body>
 </html>
