wurde Empfehlungteile hingezügt

--- a/index.html
+++ b/index.html
@@ -1,64 +1,93 @@
 <!DOCTYPE html>
 <html lang="pe" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shuhe</title>
-    <link rel="stylesheet" href="./style/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
     <div class="header">
-        <nav>
-            <h1 class="title">فروشگاه کفش   های ای پرو</h1>
-         </nav>
-         <div class="hero-section">
-             <img src="./assets/images/hero.webp" alt="">
-         </div>
+      <nav>
+        <h1 class="title">فروشگاه کفش های ای پرو</h1>
+      </nav>
+      <div class="hero-section">
+        <img src="./assets/images/hero.webp" alt="" />
+      </div>
     </div>
     <div class="container">
-        <h2 class="">جدید ترین کفش ها</h2>
-       <div class="row">
-            <div class="col-">
-                <img src="./assets/images/katooni1.webp" alt="">
-                <div class="info">
-                    <p class="model">
-                        <span>مدل کفش : </span> <span>نایک</span>
-                    </p>
-                    <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
-                    <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
-                </div>
-            </div>
-            <div class="col-">
-                <img src="./assets/images/katooni1.webp" alt="">
-                <div class="info">
-                    <p class="model">
-                        <span>مدل کفش : </span> <span>نایک</span>
-                    </p>
-                    <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
-                    <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
-                </div>
-            </div>
-            <div class="col-">
-                <img src="./assets/images/katooni1.webp" alt="">
-                <div class="info">
-                    <p class="model">
-                        <span>مدل کفش : </span> <span>نایک</span>
-                    </p>
-                    <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
-                    <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
-                </div>
-            </div>
-            <div class="col-">
-                <img src="./assets/images/katooni1.webp" alt="">
-                <div class="info">
-                    <p class="model">
-                        <span>مدل کفش : </span> <span>نایک</span>
-                    </p>
-                    <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
-                    <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
-                </div>
-            </div>
-       </div> 
+      <h2 class="">جدید ترین کفش ها</h2>
+      <div class="row">
+        <div class="col-">
+          <img src="./assets/images/katooni1.webp" alt="" />
+          <div class="info">
+            <p class="model"><span>مدل کفش : </span> <span>نایک</span></p>
+            <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+            <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+          </div>
+        </div>
+        <div class="col-">
+          <img src="./assets/images/katooni1.webp" alt="" />
+          <div class="info">
+            <p class="model"><span>مدل کفش : </span> <span>نایک</span></p>
+            <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+            <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+          </div>
+        </div>
+        <div class="col-">
+          <img src="./assets/images/katooni1.webp" alt="" />
+          <div class="info">
+            <p class="model"><span>مدل کفش : </span> <span>نایک</span></p>
+            <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+            <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+          </div>
+        </div>
+        <div class="col-">
+          <img src="./assets/images/katooni1.webp" alt="" />
+          <div class="info">
+            <p class="model"><span>مدل کفش : </span> <span>نایک</span></p>
+            <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+            <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+    <div class="container" style="margin-top: 50px">
+      <h2 class="">محصولات پشنهادی ای پرو</h2>
+      <div class="row">
+        <div class="col-">
+          <img src="./assets/images/katooni1.webp" alt="" />
+          <div class="info">
+            <p class="model"><span>مدل کفش : </span> <span>نایک</span></p>
+            <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+            <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+          </div>
+        </div>
+        <div class="col-">
+          <img src="./assets/images/katooni2.webp" alt="" />
+          <div class="info">
+            <p class="model"><span>مدل کفش : </span> <span>نایک</span></p>
+            <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+            <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+          </div>
+        </div>
+        <div class="col-">
+          <img src="./assets/images/katooni3.webp" alt="" />
+          <div class="info">
+            <p class="model"><span>مدل کفش : </span> <span>نایک</span></p>
+            <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+            <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+          </div>
+        </div>
+        <div class="col-">
+          <img src="./assets/images/katooni4.webp" alt="" />
+          <div class="info">
+            <p class="model"><span>مدل کفش : </span> <span>نایک</span></p>
+            <p class="much"><span>موجودی : </span> <span>۶ عدد</span></p>
+            <p class="prise"><span>قیمت : </span><span>۱۲۰۰ Afg</span></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
