wurde footerteile gebaut

--- a/index.html
+++ b/index.html
@@ -89,5 +89,8 @@
         </div>
       </div>
     </div>
+    <div class="footer">
+        <h3>فروشگاه ای پرو قضای امن و مناسب برای محصولات شما</h3>
+    </div>
   </body>
 </html>
