--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     </div>
     <div class="footer">
         <h3>فروشگاه ای پرو قضای امن و مناسب برای محصولات شما</h3>
+        <p>برای اطلاعات بیشتر با ما در ارتباط شوید</p>
     </div>
   </body>
 </html>
